--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 
 <body>
   <header>
-    <img src="/assets/submark.png" />
+    <img src="assets/submark.png" width="150" height="50" />
 
     <nav class="nav-collapse">
       <ul>
