--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <input type="password" name="senha" id="senha" placeholder="Senha" class="form-control" required />
 
 
-      <button type="submit" class="btn btn-primary">ENTRAR</button>
+      <button onclick="window.location.href='/dashboard.html'" type="submit" class="btn btn-primary">ENTRAR</button>
 
       <p>Não tem uma conta? <a href="/cadastro.html">CADASTRE-SE</a></p>
   </form>
